2005-05-04  Francois Dumont  <dums@stlport...>

	* stlport/config/stl_msvc.h: Change configuration for MSVC .Net 2003 and 2005
	that seems to have a bug in the namespace management thanks .
	
	* stlport/stdlib.h: Add errno.h inclusion from this file for gcc mingw as this
	compiler version do define errno macro in stdlib.h as MSVC do.
	
2005-05-03  Francois Dumont  <dums@stlport...>

	* stlport/stl_user_config.h, stl/_site_config.h, config/stl_gcc.h, _prolog.h
	, _epilog.h : Use strict Ansi C comments (/**/) for headers accessible thought 
	the STLport C headers.
	
	* stlport/C headers: Cleaned from C++ style comments.

2005-05-02  Francois Dumont  <dums@stlport...>

	* build/Makefiles/nmake/vc-common.mak: Restore of LDFLAGS_A_REL introduce the
	2004-10-30 and lost the 2005-04-16, it avoids warning due to use of the whole
	program optimization with VC.Net 2003 and 2005.
	
	* stlport/stl/_string_io.c: Modification of the basic_string i/o operators in the
	way it deals with the size_type and streamsize difference; it is equivalent with the
	former one but do not generate warning with gcc (mingwin).
	
	* stlport/stddef.h, stdlib.h, errno.h: Fix issue under MSVC compilers where native
	stdlib.h and stddef.h are defining errno macro without including errno.h forbiding
	STLport to do so thanks report. Now errno.h will report this problem with an explicit
	#error.
	
	* test/unit/test_errno.cpp: Improvement of the test to reveal the previous issue.

2005-05-02  Petr Ovtchenkov  <ptr@island...>

	* makesystem (repository): restore experimental support of MetroWerks
	compiler for NetWare, with help of GNU make and Cygwin environment.

2005-04-29  Francois Dumont  <dums@stlport...>

	* stlport/stl/_time_facets.c: gcc warnings reveal that we were missing some
	ctype::widen method call to compare things like month or day names. Also simplified
	implementation of the __math and __get_formatted_time that do not really need all
	the template parameters passed to it.
	